@startuml

title __LOCATION's Class Diagram__\n

  namespace org.optaweb.vehiclerouting {
    namespace service.location {
      interface org.optaweb.vehiclerouting.service.location.DistanceMatrix {
          {abstract} + addLocation()
          {abstract} + clear()
          {abstract} + distance()
          {abstract} + put()
          {abstract} + removeLocation()
      }
    }
  }
  

  namespace org.optaweb.vehiclerouting {
    namespace service.location {
      interface org.optaweb.vehiclerouting.service.location.DistanceMatrixRow {
          {abstract} + distanceTo()
      }
    }
  }
  

  namespace org.optaweb.vehiclerouting {
    namespace service.location {
      interface org.optaweb.vehiclerouting.service.location.LocationPlanner {
          {abstract} + addLocation()
          {abstract} + removeAllLocations()
          {abstract} + removeLocation()
      }
    }
  }
  

  namespace org.optaweb.vehiclerouting {
    namespace service.location {
      interface org.optaweb.vehiclerouting.service.location.LocationRepository {
          {abstract} + createLocation()
          {abstract} + find()
          {abstract} + locations()
          {abstract} + removeAll()
          {abstract} + removeLocation()
      }
    }
  }
  

  namespace org.optaweb.vehiclerouting {
    namespace service.location {
      class org.optaweb.vehiclerouting.service.location.LocationService {
          - errorEvent : Event<ErrorEvent>
          {static} - logger : Logger
          + addLocation()
          + createLocation()
          + populateDistanceMatrix()
          + removeAll()
          + removeLocation()
          ~ LocationService()
          - addToMatrix()
      }
    }
  }
  

  org.optaweb.vehiclerouting.service.location.LocationService o-- org.optaweb.vehiclerouting.service.location.DistanceMatrix : distanceMatrix
  org.optaweb.vehiclerouting.service.location.LocationService o-- org.optaweb.vehiclerouting.service.distance.DistanceRepository : distanceRepository
  org.optaweb.vehiclerouting.service.location.LocationService o-- org.optaweb.vehiclerouting.service.location.LocationPlanner : planner
  org.optaweb.vehiclerouting.service.location.LocationService o-- org.optaweb.vehiclerouting.service.location.LocationRepository : repository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
